--- a/src/static/css/general.css
+++ b/src/static/css/general.css
@@ -483,7 +483,7 @@ div.fieldset div.field-inline {
 /* Forms */
 
 .form-container {
-    padding: 10px;
+    padding: 15px;
 }
 
 .form-container .form-legend {
